添加foodlist接口，未做分页

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ xyz.crowxx.dcxt.filepath=E:/project/static/static/uploads/images
 spring.mvc.static-path-pattern= /static/**
 spring.resources.static-locations=spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:E:/project/static/
 
+#填写部署后的服务器地址
+xyz.crowxx.dcxt.dcxtcomplete.api.apfoodcontroller.server.address=http://localhost:8080/
